--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/com.github.librepdf/openpdf -->
 <dependency>
-    <groupId>com.itextpdf</groupId>
-    <artifactId>itextpdf</artifactId>
-    <version>5.5.13.4</version>
+    <groupId>com.github.librepdf</groupId>
+    <artifactId>openpdf</artifactId>
+    <version>3.0.0</version>
 </dependency>
 <dependency>
     <groupId>org.apache.pdfbox</groupId>
